--- a/_docs/text/previoussolutions.tex
+++ b/_docs/text/previoussolutions.tex
@@ -40,7 +40,7 @@ Keďže sa však jedná o samostatnú webovú aplikáciu, nie je možné ju impl
 	\item \textit{Infografiky} na lepšiu zapamätateľnosť informácií.
 \end{itemize}
 Umožňuje bezplatné prepojenie s viacerými cloudovými riešeniami ako Google Drive, OneDrive alebo možnosť integrovať do vývojových kolaboratívnych softvérov Confluence a Jira. Aplikáciu je možné používať aj pomocou desktopových aplikácií na všetkých bežných operačných systémoch (Windows, macOS, Linux, Chrome OS). 
-Ďalšími výhodami sú jednoduché a intuitívne ovládanie, dobrá skálovateľnosť pre projekty s veľkým množstvom elementov, možnosť bezplatného používania a voľná prístupnosť zdrojových súborov aplikácie pre vývojárov.
+Ďalšími výhodami sú jednoduché a intuitívne ovládanie, dobrá škálovateľnosť pre projekty s veľkým množstvom elementov, možnosť bezplatného používania a voľná prístupnosť zdrojových súborov aplikácie pre vývojárov.
 
 Nevýhodou je, že aplikáciu nie je možné prepojiť so systémom MediaWiki a nepodporuje voľné kreslenie objektov. Tie môžu byť importované formou obrázka.
 
