grammar check, created introduction, created conclusion

--- a/_docs/text/intro.tex
+++ b/_docs/text/intro.tex
@@ -1,6 +1,8 @@
 \chapter*{Úvod}\label{chap:intro}
+Vďaka rozvoju informačných technológií vzrastá aj dopyt po vytváraní multimediálneho obsahu. Informácie sa už neudržiavajú iba vo fyzickej podobe formou kníh alebo obrazov, ale sú vytvárané online a udržiavané v digitálnej podobe na dátových úložiskách rozličných internetových aplikácií a serverov. Preto je potrebné tieto informácie jednoduchým a efektívnym spôsobom spravovať. 
 
+Na zhotovenie textových alebo grafických dokumentov dnes slúžia rôzne nástroje. Tie môžu byť realizované formou počítačových alebo webových aplikácií dostupných na rôznych zariadeniach. Informácie uchovávané online sú väčšinou prístupné pre široké spektrum používateľov, ktorí sa môžu spoločne zapájať do ich tvorby. Spoločné vytváranie informácií prináša viaceré pohľady na danú problematiku s cieľom lepšej výpovednej hodnoty výsledného obsahu. Medzi najznámejšie zdroje overených informácií patrí internetová encyklopédia Wikipedia. Táto stránka postavená na systéme \textit{MediaWiki} umožňuje voľnú úpravu informatívnych článkov, v ktorých sa môžu nachádzať rozličné typy multimediálnych súborov. Multimediálne súbory a obrázky je nutné vytvárať a upravovať pomocou externých nástrojov a výsledok do systému importovať. Preto vzniká potreba integrácie nástroja slúžiaceho na dynamické vytváranie multimediálneho obsahu priamo v prostredí používaného systému. Umožnenie spolupráce viacerým používateľom súčasne, zabezpečuje rýchlejšie a kvalitnejšie spracovanie.
 
+V našej diplomovej práci sa zameriame na navrhnutie a implementáciu grafického editora obrázkov, pomocou ktorého bude možné kresliť obrazové súbory priamo v prostrediach webových aplikácií, vytvorených systémom \textit{MediaWiki}. Ten umožní spoluprácu viacerých používateľov na spoločnom zadaní, pričom zmeny vykonávané každým účastníkom budú v reálnom čase viditeľné a reflektované všetkým ostatným spolupracovníkom. 
 
-% TODO: napisat uvod podla https://www.win.tue.nl/~setalle/introduction.html
-...
+V prvej kapitole s názvom \textit{"Prehľad problematiky"} si vysvetlíme pojmy, ktoré budeme využívať pri implementácii nášho riešenia a popíšeme si využité technológie. Následne navrhneme a vysvetlíme princípy implementácie grafického editora pomocou rozšírenia pre systém MediaWiki. V závere práce sa zameriame na spôsob testovania vytvorenej aplikácie a dosiahnuté výsledky.
