--- a/_docs/text/00main.tex
+++ b/_docs/text/00main.tex
@@ -27,6 +27,7 @@
 \usepackage{titlesec}
 \usepackage{array}
 \usepackage[table,xcdraw]{xcolor}
+\usepackage{enumitem}
 
 \setstretch{1.5}
 %\renewcommand\baselinestretch{1.5} % riadkovanie jeden a pol
