UI moved to implementation, fixed some grammar misstakes, added UI screenshots

--- a/_docs/text/00main.tex
+++ b/_docs/text/00main.tex
@@ -175,13 +175,13 @@ Konzultant: & \mfconsultant
 % koniec prehlasenia
 
 \chapter*{Poďakovanie}\label{chap:thank_you}
-...podakovanie...
+Ďakujem doc. RNDr. Zuzane Kubincovej PhD. za čas a trpezlivosť, ktorú mi venovala pri konzultáciách, za cenné rady a profesionálne vedenie pri vypracovaní diplomovej práce. V neposlednom rade sa chem poďakovať mojim rodičom, starým rodičom a sestre za ich podporu. 
 \vfill\eject 
 % koniec podakovania
 
 \chapter*{Abstrakt}\label{chap:abstract_sk}
 \MakeUppercase{Krasňan}, Martin: \textit{\mftitle} [\mfthesistype]. - Univerzita Komenského v Bratislave. Fakulta matematiky, fyziky a informatiky; \mfpracovisko. - Školiteľ: \mfadvisor. Bratislava: \mfplacedate. ?? strán.
-
+%TODO: pocet stran
 Text abstraktu...
 
 ~\\
@@ -190,8 +190,8 @@ Kľúčové slová: klucove, slova, sk, ...
 
 \chapter*{Abstract}\label{chap:abstract_en}
 \MakeUppercase{Krasňan}, Martin: \textit{\enmftitle} [\enmfthesistype]. - Comenius University in Bratislava. Faculty of Mathematics, Physics and Informatics; \enmfpracovisko. - Supervisor: \mfadvisor. \mfplacedate. ?? pages.
-
-Text of abstract
+%TODO: pocet stran
+Text of abstract...
 
 ~\\
 Keywords: keywords, en, ...
