--- a/_docs/text/00main.tex
+++ b/_docs/text/00main.tex
@@ -40,7 +40,7 @@
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 
 % pekne pokope definujeme potrebne udaje
-\newcommand\mftitle{Klaboratívny grafický editor pre MediaWiki}
+\newcommand\mftitle{Kolaboratívny grafický editor pre MediaWiki}
 \newcommand\enmftitle{Collaborative graphics editor for MediaWiki}
 \newcommand\mfthesistype{Diplomová práca}
 \newcommand\enmfthesistype{Master thesis}
